--- a/src/App.scss
+++ b/src/App.scss
@@ -1,26 +1,31 @@
 
 
 .navigationContainer {
-  height: 20%;
+  height: 25%;
   width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
-
+  justify-content: space-between;
+  .navigationList {
+    justify-content: right;
+    ul {
+      list-style-type: none;
+      margin-inline-start: 0em;
+      margin-right: 20px;
+      li {
+        display: inline;
+        padding-left: 5px;
+        padding-right: 5px;
+      }
+    }
+  }
 
   .logoContainer  {
-    width: 30%
-  }
-}
-.navigationList {
-  justify-content: right;
-  ul {
-    list-style-type: none;
-    margin-inline-start: 0em;
-    li {
-      display: inline;
-      padding-left: 5px;
-      padding-right: 5px;
-    }
+    margin-left: 15px;
+    width: 25%;
+    justify-content: left;
   }
 }
