--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 //TEst
-
+ul {
+  list-style-type: none;
+}
 .navigationContainer {
   height: 25%;
   width: 100%;
@@ -33,3 +35,30 @@
   height : 200vh;
   width : 100vw;
 }
+.prefooter {
+  height: 130px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #4daa95;
+  color:white;
+  font-size: 25px;
+
+  .shareButton {
+    background-color: #4daa95;
+    color:white;
+    border-radius: 500px;
+    padding: 8px 16px;
+    font-weight: 300;
+    font-size: 14px;
+    border: 2px solid white;
+    :hover {
+      color:black
+    }
+  }
+}
+.footer {
+  display:flex;
+  flex-direction: row;
+  }
