--- a/src/App.scss
+++ b/src/App.scss
@@ -24,17 +24,26 @@ ul {
       }
     }
   }
-
   .logoContainer  {
     margin-left: 15px;
     width: 25%;
     justify-content: left;
   }
 }
-.MyAwesomeParallax img {
-  height : 200vh;
-  width : 100vw;
+.container-fluid {
+    padding-right: 0px;
+    padding-left: 0px;
+    background-image: url('./components/img/home/spaghetti.jpg');
 }
+.heroBannerMessage {
+  background-color: #4daa95;
+  color: white;
+  margin: 95px 40px 95px 40px;
+  padding: 45px 30px 45px 30px;
+  opacity: .9;
+  justify-content: right;
+}
+
 .prefooter {
   height: 130px;
   display: flex;
