--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,9 @@
 //TEst
 ul {
   list-style-type: none;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  padding-inline-start: 0px
 }
 .navigationContainer {
   height: 25%;
@@ -38,10 +41,25 @@ ul {
 .heroBannerMessage {
   background-color: #4daa95;
   color: white;
+  max-width: 600px;
   margin: 95px 40px 95px 40px;
   padding: 45px 30px 45px 30px;
   opacity: .9;
-  justify-content: right;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  .shareButton {
+      background-color: #ff9e16;
+      color:white;
+      border-radius: 500px;
+      padding: 8px 16px;
+      font-weight: 300;
+      font-size: 14px;
+      border: 2px solid #ff9e16;
+      :hover {
+        color:black
+      }
+  }
 }
 
 .prefooter {
